Simplify reflection model and qualifiers matching
This refactors a few things in the LOG4J2-2854 APIs:

* Rearranged some packages
* Removed the MetaElement and ElementManager API to rely directly on native reflection APIs
* Ported tests from JUnit 4 to JUnit 5
* Added NamedAliases and alias providers
* Removed Variable and collapsed it into the plain Bean interface
* Replaced qualifiers with names and aliases
* Replaced default qualifier with an empty string name (empty string name cannot be directly used as a name as that indicates to derive the name from the program element usually)